lesson7/loop4/09-task-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-runner
  namespace: tasks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-runner
  template:
    metadata:
      labels:
        app: task-runner
    spec:
      containers:
      - name: task-runner
        image: yanchen184/task-runner:v1
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
